# Computer-Vision-Inference-and-Server

./: Makefile  README.md  pyproject.toml  ruff.toml
cvias/: __init__.py
cvias/common/: __init__.py  utils_mmdet.py  utils_pypkg.py
cvias/common/class_mapper/: __init__.py  coco.py
cvias/image/: __init__.py
cvias/image/detection/: __init__.py  cvias_detection.py  mm_detection.py  mmdetection.py  vllm_detection.py
cvias/image/detection/object/: __init__.py  yolo.py
cvias/image/detection/object/open_vocabulary/: __init__.py  faster_rcnn.py  yolo_world.py
cvias/video/: __init__.py
cvias/video/embedding/: __init__.py
cvias/video/embedding/viclip/: viclip.py
cvias/video/embedding/viclip/viclip_base/: simple_tokenizer.py
cvias/video/emdeddings/: __init__.py
cvias/video/emdeddings/viclip/: __init__.py  viclip_detection.py
cvias/video/emdeddings/viclip/viclip_base/: viclip.py
cvias/vision_language/: _base.py  vllm_client.py
cvias/vision_language/internvl/: __init__.py  internvl.py
cvias/vision_language/internvl/from_src/: utility.py
cvias/vision_language/llama3_2/: __init__.py  llama3_2_instruct.py
requirements/internvl/: requirements.txt
requirements/viclip/: requirements.txt
scripts/: start_vllm_server.sh
test_scripts/image/detection/: yolo.py
test_scripts/video/embedding/: vclip.py  viclip.py
test_scripts/vision_language/: internvl_with_image.py  internvl_with_imageconfidence.py  internvl_with_video.py  llama3.2_with_image.py  vllm_client.py
tests/image/detection/object/: test_yolo.py
tests/image/detection/object/open_vocabulary/: test_faster_rcnn.py  test_yolo_world.py
