[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
exclude = ["images","test*",]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "cvias"
version = "0.0.1"
authors = [
  { name="Minkyu Choi", email="minkyu.choi@coargus.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cog_cv_abstraction@git+https://github.com/Coargus/computer-vision-model-abstraction.git",
    "cogutil@git+https://github.com/Coargus/cogutil.git#egg=cogutil",
    "ultralytics",
]

[project.urls]
"Homepage" = "https://github.com/Coargus/computer-vision-model-server"
"Bug Tracker" = "https://github.com/Coargus/computer-vision-model-server/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]